# ETL-MI

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  hello.py  pipeline.py  pyproject.toml  requirements.txt
dags/: etl-mi.py
dags/scripts/: __init__.py  extract.py  load.py  transform.py
notebooks/: image_analysis.ipynb  pipeline.ipynb  preprocess.ipynb
scripts/: extract.py  transform.py
