[project]
name = "etl-mi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apache-airflow>=2.10.3",
    "cryptography>=44.0.0",
    "findspark>=2.0.1",
    "jupyter>=1.1.1",
    "kaggle>=1.6.17",
    "kagglehub>=0.3.4",
    "matplotlib>=3.9.3",
    "nibabel>=5.3.2",
    "numpy>=2.1.3",
    "opencv-python>=4.10.0.84",
    "pillow>=11.0.0",
    "pyspark>=3.5.3",
]
